libs/@local/hashql/ast/tests/ui/lower/import-resolver/glob-not-found.jsonc
//@ run: fail
//@ description: Tests that importing from a non-existent module produces an appropriate error with suggestions
["use", "kernel::foo", "*", "_"]
//~^ ERROR Module 'foo' not found
